--- a/src/MarsExploration.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/MarsExploration.WebUI/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - MarsExploration.WebUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - MarsExploration.WebUI
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
