Pretty well finished, quite crude in some places but over all good. Still missing taking capture of SVG output to send to backend

--- a/src/MarsExploration.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/MarsExploration.WebUI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="History">History</a>
                         </li>
                     </ul>
                 </div>
@@ -40,8 +40,11 @@
             &copy; 2020 - MarsExploration.WebUI
         </div>
     </footer>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="~/js/roverGrid.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
