--- a/src/MarsExploration.WebUI/Views/Home/Index.cshtml
+++ b/src/MarsExploration.WebUI/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Mars Exploration";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div id="grid-view"></div>
+    <div class="form-group">
+        <label for="rawinput">Raw Input to Mars Exploration Service</label>
+        <textarea rows="5" class="form-control" id="rawinput">
+            5 5
+            1 2 N
+            LMLMLMLMM
+            3 3 E
+            MMRMMRMRRM
+        </textarea>
+        <button type="submit" id="submit-input-btn" class="btn btn-primary">Submit</button>
+    </div>
 </div>
+@section scripts
+{
+
+<script>
+    $("#submit-input-btn").click(e => {
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("Index", "Rover")',
+            contentType: "text/plain",
+            data: $("#rawinput").val(),
+            dataType: "html",
+            success: (d) => $("#grid-view").html(d)
+        });
+});
+</script>
+
+}
